--- a/stacks/proxy.prx.org.yml
+++ b/stacks/proxy.prx.org.yml
@@ -36,7 +36,7 @@ Mappings:
       DomainName: "proxy.prx.org"
       HostedZoneName: "prx.org."
       ValidationDomain: "prx.org"
-      CorporateHost: "exchange.prx.org"
+      CorporateHost: "corporate.prx.tech"
       ExchangeHost: "exchange.prx.org"
       PrxSessionKey: "_prx_session"
 Resources:
