remove unused conditions

--- a/db/rds-instance.yml
+++ b/db/rds-instance.yml
@@ -87,8 +87,6 @@ Parameters:
 Conditions:
   UseSnapshot: !Not [!Equals [!Ref DBSnapshot, '']]
   CreateDB: !Not [!Equals [!Ref CreateDBName, '']]
-  CreateStagingResources: !Equals [!Ref EnvironmentType, Staging]
-  CreateProductionResources: !Equals [!Ref EnvironmentType, Production]
 Resources:
   MasterDB:
     Type: 'AWS::RDS::DBInstance'
@@ -123,7 +121,7 @@ Resources:
         - Key: 'prx:cloudformation:stack-id'
           Value: !Ref AWS::StackId
       DBSubnetGroupName: !Sub Platform-${EnvironmentType}
-# The MySQL_replication_tunnel security group is added and removed manually for use durng migration     
+# The MySQL_replication_tunnel security group is added and removed manually for use during migration     
 #     VPCSecurityGroups: [!Ref EC2SecurityGroup]
 # replication won't connect via tunnel if false
 # Post migration, we want to set PubliclyAccessible to false
