--- a/db/elasticache.yml
+++ b/db/elasticache.yml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >-
-  AWS CloudFormation Memcached Template: Template to create Elasticachr memcached instance.
+  AWS CloudFormation Memcached Template: Template to create Elasticache Memcached cluster
 Parameters:
   EnvironmentType:
     Type: String
@@ -46,12 +46,29 @@ Parameters:
       - 8
       - 9
       - 10
+  VPCStack:
+    Description: VPC stack to add this cache into
+    Type: String
+    Default: VPCStack
 Conditions:
   MultiZone: !Not [!Equals [!Ref NumCacheNodes, 1]]
 Resources:
+  ElasticacheSubnetGroup:
+    Type: "AWS::ElastiCache::SubnetGroup"
+    Properties:
+      CacheSubnetGroupName: !Sub Platform-${EnvironmentType}-cache
+      Description: !Ref EnvironmentType
+      SubnetIds:
+        - Fn::ImportValue:
+            !Sub ${VPCStack}-Subnet1
+        - Fn::ImportValue:
+            !Sub ${VPCStack}-Subnet2
   ElasticacheSecurityGroup:
     Type: "AWS::EC2::SecurityGroup"
     Properties:
+      VpcId:
+        Fn::ImportValue:
+          !Sub ${VPCStack}-VPC
       GroupDescription: "Elasticache Security Group"
       SecurityGroupIngress:
         - CidrIp: 0.0.0.0/0
@@ -66,6 +83,7 @@ Resources:
       Engine: "memcached"
       CacheNodeType: !Ref CacheNodeType
       NumCacheNodes: !Ref NumCacheNodes
+      CacheSubnetGroupName: !Sub Platform-${EnvironmentType}-cache
       VpcSecurityGroupIds:
         - !GetAtt ElasticacheSecurityGroup.GroupId
       Tags:
