update subnet group naming and use

--- a/db/elasticache.yml
+++ b/db/elasticache.yml
@@ -56,7 +56,7 @@ Resources:
   ElasticacheSubnetGroup:
     Type: "AWS::ElastiCache::SubnetGroup"
     Properties:
-      CacheSubnetGroupName: !Sub Platform-${EnvironmentType}-cache
+      CacheSubnetGroupName: !Sub Platform-${EnvironmentType}-${AWS::StackName}-cache
       Description: !Ref EnvironmentType
       SubnetIds:
         - Fn::ImportValue:
@@ -83,7 +83,7 @@ Resources:
       Engine: "memcached"
       CacheNodeType: !Ref CacheNodeType
       NumCacheNodes: !Ref NumCacheNodes
-      CacheSubnetGroupName: !Sub Platform-${EnvironmentType}-cache
+      CacheSubnetGroupName: !Sub Platform-${EnvironmentType}-${AWS::StackName}-cache
       VpcSecurityGroupIds:
         - !GetAtt ElasticacheSecurityGroup.GroupId
       Tags:
