--- a/db/mysql-instance.yml
+++ b/db/mysql-instance.yml
@@ -138,7 +138,7 @@ Resources:
   RDSSubnetGroup:
     Type: 'AWS::RDS::DBSubnetGroup'
     Properties:
-      DBSubnetGroupName: !Sub Platform-${EnvironmentType}-db
+      DBSubnetGroupName: !Sub Platform-${EnvironmentType}-${AWS::StackName}-db
       DBSubnetGroupDescription: !Ref EnvironmentType
       SubnetIds:
         - Fn::ImportValue:
@@ -183,7 +183,7 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: 'prx:cloudformation:stack-id'
           Value: !Ref AWS::StackId
-      DBSubnetGroupName: !Sub Platform-${EnvironmentType}
+      DBSubnetGroupName: !Sub Platform-${EnvironmentType}-${AWS::StackName}-db
 # The MySQL_replication_tunnel security group is added and removed manually for use during migration
 #     VPCSecurityGroups: [!Ref EC2SecurityGroup]
 # replication won't connect via tunnel if false
