Fix desc for stack and remove whitespace

--- a/stacks/legacy-support/stripe-proxy.yml
+++ b/stacks/legacy-support/stripe-proxy.yml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
-  Docker web application with optional worker, with its own ALB
+  Docker proxy server for stripe with its own ALB
 Conditions:
   CreateProductionResources: !Equals [!Ref EnvironmentType, Production]
 Parameters:
