Fix use of InfrastructureGitCommit, ECSClusterStack parameters

--- a/stacks/legacy-support/stripe-proxy.yml
+++ b/stacks/legacy-support/stripe-proxy.yml
@@ -235,7 +235,7 @@ Resources:
       ContainerDefinitions:
         - Cpu: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, ContainerCpu]
           Essential: true
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/stripe-proxy.prx.org:latest
+          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/stripe-proxy:latest
           LogConfiguration:
             LogDriver: awslogs
             Options:
