--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -205,6 +205,7 @@ Resources:
       TimeoutInMinutes: "5"
   LegacySupportRootStack:
     Type: "AWS::CloudFormation::Stack"
+    DependsOn: ECSClusterStack
     Properties:
       NotificationARNs:
         - Fn::ImportValue:
