--- a/stacks/legacy-support/root.yml
+++ b/stacks/legacy-support/root.yml
@@ -37,7 +37,6 @@ Parameters:
 Resources:
   StripeProxyStack:
     Type: "AWS::CloudFormation::Stack"
-    DependsOn: ECSClusterStack
     Properties:
       NotificationARNs:
         - Fn::ImportValue:
@@ -69,4 +68,6 @@ Resources:
         - Key: "prx:cloudformation:stack-id"
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/stripe-proxy.yml"]]
+      TemplateURL: !Join ["", [!Ref TemplateUrlPrefix, "stripe-proxy.yml"]]
+
       TimeoutInMinutes: "5"
