Fix task definition name and dupe templateurl

--- a/stacks/legacy-support/stripe-proxy.yml
+++ b/stacks/legacy-support/stripe-proxy.yml
@@ -264,7 +264,7 @@ Resources:
           ContainerPort: 80
           TargetGroupArn: !Ref StripeProxyALBTargetGroup
       Role: !Ref ECSServiceIAMRole
-      TaskDefinition: !Ref WebTaskDefinition
+      TaskDefinition: !Ref StripeProxyWebTaskDefinition
   # Route 53
   StripeProxyWebRecordSetGroup:
     Type: "AWS::Route53::RecordSetGroup"
