Rename the container to be consistently stripe-proxy

--- a/stacks/legacy-support/stripe-proxy.yml
+++ b/stacks/legacy-support/stripe-proxy.yml
@@ -242,7 +242,7 @@ Resources:
               awslogs-group: !Ref StripeProxyWebLogGroup
               awslogs-region: !Ref AWS::Region
           Memory: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, ContainerMemory]
-          Name: stripe-proxy-web
+          Name: stripe-proxy
           PortMappings:
             - HostPort: 0
               ContainerPort: 80
