Temporarily disables health check

--- a/stacks/legacy-support/stripe-proxy.yml
+++ b/stacks/legacy-support/stripe-proxy.yml
@@ -126,9 +126,9 @@ Resources:
     Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
     DependsOn: StripeProxyALB
     Properties:
-      HealthCheckIntervalSeconds: 60
-      HealthCheckTimeoutSeconds: 10
-      HealthCheckPath: /healthcheck
+      # HealthCheckIntervalSeconds: 60
+      # HealthCheckTimeoutSeconds: 10
+      # HealthCheckPath: /healthcheck
       Name: !Sub stripe-proxy-${EnvironmentTypeAbbreviation}-${VPC}
       Port: 80
       Protocol: HTTP
